# OpenAI-Retrieval-Assistants

./: .gitignore  README.md  app.py  notebook.ipynb  pyproject.toml  retrieval_logic.py
